<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/sectionDivider"
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:background="@drawable/bg_section_divider"
        android:gravity="center_vertical"
        android:text="@string/favorite_section"
        android:textColor="@color/warning"
        android:textSize="@dimen/hint_text"
        android:textStyle="bold"
        android:visibility="gone"
        tools:visibility="visible" />

    <LinearLayout
        android:id="@+id/repoCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/card_spacing"
        android:background="@drawable/bg_repo_card"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center_vertical"
        android:minHeight="@dimen/card_min_height"
        android:orientation="vertical"
        android:paddingLeft="@dimen/card_padding_horizontal"
        android:paddingTop="@dimen/card_padding_vertical"
        android:paddingRight="@dimen/card_padding_horizontal"
        android:paddingBottom="@dimen/card_padding_vertical">

        <TextView
            android:id="@+id/repoName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="@color/text_bright"
            android:textSize="@dimen/repo_title_text"
            tools:text="user1/awesome-apk" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/repoDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:maxLines="1"
                android:textColor="@color/text_secondary"
                android:textSize="@dimen/repo_description_text"
                tools:text="精选安卓工具集" />

            <TextView
                android:id="@+id/sourceBadge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:background="@drawable/bg_badge"
                android:text="@string/preset_badge"
                android:textColor="@color/focus"
                android:textSize="@dimen/badge_text" />
        </LinearLayout>

        <TextView
            android:id="@+id/openHint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="end"
            android:text="@string/repository_open_hint"
            android:textColor="@color/text_muted"
            android:textSize="@dimen/hint_text" />
    </LinearLayout>
</LinearLayout>
